Bug 1159496: Ensure decoders are properly shutdown. r=alfredo